# the-construct-public

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: construct.rb
crates/construct-cli/: Cargo.toml
crates/construct-cli/src/: commands.rs  doctor.rs  main.rs  setup.rs  theme.rs
crates/construct-cli/src/tui/: chat.rs  dashboard.rs  mod.rs  rain.rs  watch_loop.rs
crates/construct-config/: Cargo.toml
crates/construct-config/src/: lib.rs
crates/construct-core/: Cargo.toml
crates/construct-core/src/: clock.rs  lib.rs  model.rs  stage.rs  store.rs  tool.rs  types.rs
crates/construct-engine/: Cargo.toml
crates/construct-engine/src/: actions.rs  agent_loop.rs  events.rs  gate.rs  guard.rs  lib.rs  orchestrator.rs  pipeline.rs  priori.rs  rules.rs  testkit.rs
crates/construct-engine/src/pipelines/: brief.rs  daily.rs  file_this.rs  inbox.rs  journal_tag.rs  mod.rs  organize.rs  remind.rs  research.rs  summarize.rs  tag.rs
crates/construct-engine/src/triggers/: idle.rs  mod.rs  schedule.rs
crates/construct-model-cloud/: Cargo.toml
crates/construct-model-cloud/src/: anthropic.rs  lib.rs  openai.rs
crates/construct-model-ollama/: Cargo.toml
crates/construct-model-ollama/src/: lib.rs
crates/construct-obsidian/: Cargo.toml
crates/construct-obsidian/src/: block.rs  frontmatter.rs  lib.rs  vault.rs  watcher.rs
crates/construct-store/: Cargo.toml
crates/construct-store/migrations/: 0001_init.sql  0002_schedule_state.sql  0003_brief_state.sql
crates/construct-store/src/: lib.rs
crates/construct-tools/: Cargo.toml
crates/construct-tools/src/: lib.rs  web_fetch.rs  web_search.rs
docs/: audit-2026-06-02.md  configuration.md  design-todo.md  handlers.md  install.md  loop-log.md  security.md  stats-access.md
docs/superpowers/: NEXT-SESSION-PROMPT.md  slice-2-backlog.md
docs/superpowers/plans/: 2026-05-29-the-construct-slice-1.md  2026-05-30-the-construct-slice-2-note-actions.md  2026-06-02-the-construct-slice-3-plan-1-triggers.md  2026-06-02-the-construct-slice-3-plan-2-inbox.md  2026-06-02-the-construct-slice-3-plan-3-daily-summary.md  2026-06-09-slice-4-release-ready.md
docs/superpowers/specs/: 2026-05-29-the-construct-prd.md  2026-05-29-the-construct-slice-1-design.md  2026-05-30-the-construct-slice-2-note-actions-design.md  2026-06-02-the-construct-slice-3-automations-design.md  2026-06-09-the-construct-slice-4-release-ready-design.md
examples/: README.md
examples/sample-vault/Inbox/: Domain renewal.md  Groceries.md  Kubernetes notes.md  Research WASM components.md
prompts/: daily_summary.md  librarian.md  scout.md
scripts/: release.sh  setup-home.sh  update.sh
