[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattisthenation/the-construct-public"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Errors
thiserror = "1"
anyhow = "1"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Time / ids / hashing
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Storage
# sqlite only; no `macros`/`migrate` so the mysql/postgres drivers (and their
# rsa dependency, RUSTSEC-2023-0071) are never pulled. Schema runs via raw_sql.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# Filesystem watching
notify = "6"
notify-debouncer-full = "0.3"

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
dialoguer = "0.11"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
