[package]
name = "construct-cli"
version = "0.4.0"
edition.workspace = true

[[bin]]
name = "entertheconstruct"
path = "src/main.rs"

[dependencies]
construct-core = { path = "../construct-core" }
construct-config = { path = "../construct-config" }
construct-store = { path = "../construct-store" }
construct-engine = { path = "../construct-engine" }
construct-obsidian = { path = "../construct-obsidian" }
construct-tools = { path = "../construct-tools" }
construct-model-ollama = { path = "../construct-model-ollama" }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
dotenvy.workspace = true
dialoguer.workspace = true
futures = "0.3.32"

[dev-dependencies]
toml.workspace = true
tempfile.workspace = true
async-trait.workspace = true
