[package]
name = "construct-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
construct-core = { path = "../construct-core" }
sqlx.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
