[package]
name = "construct-tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
construct-core = { path = "../construct-core" }
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures = "0.3.32"
tokio = { workspace = true, features = ["net", "rt"] }

[dev-dependencies]
tokio.workspace = true
